fix(style): animated images overflow

--- a/src/app/animated-background-meme/animated-background-meme.component.sass
+++ b/src/app/animated-background-meme/animated-background-meme.component.sass
@@ -3,3 +3,9 @@
   position: absolute
   bottom: 0
   opacity: 0
+  width: 50vh
+  height: 50vh
+  object-fit: contain
+
+  img
+    width: 100%
