--- a/src/app/sudoku-board/sudoku-board.component.sass
+++ b/src/app/sudoku-board/sudoku-board.component.sass
@@ -7,7 +7,8 @@
   justify-content: flex-start
   align-items: center
   gap: 2rem
-
+  position: relative
+  overflow-x: hidden
   
 .board-wrapper
   max-width: 600px
